{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 17,
  "lineage": "c4efbca7-3ecb-1f91-1953-6a6b5e2f1ca7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:118755950183:internet-gateway/igw-02f698cbe20f7d774",
            "id": "igw-02f698cbe20f7d774",
            "owner_id": "118755950183",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "mbole-pay-prod-igw",
              "Project": "mbole-pay"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "mbole-pay-prod-igw",
              "Project": "mbole-pay"
            },
            "vpc_id": "vpc-06e7245304064dd5f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:118755950183:route-table/rtb-097b87e9f8d990b85",
            "id": "rtb-097b87e9f8d990b85",
            "owner_id": "118755950183",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02f698cbe20f7d774",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "mbole-pay-prod-public-rt",
              "Project": "mbole-pay"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "mbole-pay-prod-public-rt",
              "Project": "mbole-pay"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e7245304064dd5f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public_a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f36d0abf520edd20",
            "route_table_id": "rtb-097b87e9f8d990b85",
            "subnet_id": "subnet-05f938f39b71a69d7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "public_b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a13339de43255663",
            "route_table_id": "rtb-097b87e9f8d990b85",
            "subnet_id": "subnet-0d08a2b10ec97d9bf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:118755950183:security-group/sg-076ed4f18626a5d7d",
            "description": "Security group for app workloads",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound from app",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-076ed4f18626a5d7d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP to app",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "mbole-pay-prod-app-sg",
            "name_prefix": "",
            "owner_id": "118755950183",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "mbole-pay-prod-app-sg",
              "Project": "mbole-pay"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "mbole-pay-prod-app-sg",
              "Project": "mbole-pay"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e7245304064dd5f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:118755950183:security-group/sg-0100c693b79dc6859",
            "description": "Security group for PostgreSQL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound from DB",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0100c693b79dc6859",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow PostgreSQL from app SG",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-076ed4f18626a5d7d"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "mbole-pay-prod-db-sg",
            "name_prefix": "",
            "owner_id": "118755950183",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "mbole-pay-prod-db-sg",
              "Project": "mbole-pay"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "mbole-pay-prod-db-sg",
              "Project": "mbole-pay"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e7245304064dd5f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.app",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private_a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:118755950183:subnet/subnet-0862b4f0864adeadd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.20.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0862b4f0864adeadd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "118755950183",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "mbole-pay-prod-private_a",
              "Project": "mbole-pay",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "mbole-pay-prod-private_a",
              "Project": "mbole-pay",
              "Tier": "private"
            },
            "vpc_id": "vpc-06e7245304064dd5f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "private_b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:118755950183:subnet/subnet-08affa17fb5ede18e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.20.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08affa17fb5ede18e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "118755950183",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "mbole-pay-prod-private_b",
              "Project": "mbole-pay",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "mbole-pay-prod-private_b",
              "Project": "mbole-pay",
              "Tier": "private"
            },
            "vpc_id": "vpc-06e7245304064dd5f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public_a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:118755950183:subnet/subnet-05f938f39b71a69d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05f938f39b71a69d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "118755950183",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "mbole-pay-prod-public_a",
              "Project": "mbole-pay",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "mbole-pay-prod-public_a",
              "Project": "mbole-pay",
              "Tier": "public"
            },
            "vpc_id": "vpc-06e7245304064dd5f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "public_b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:118755950183:subnet/subnet-0d08a2b10ec97d9bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.20.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d08a2b10ec97d9bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "118755950183",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "mbole-pay-prod-public_b",
              "Project": "mbole-pay",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "mbole-pay-prod-public_b",
              "Project": "mbole-pay",
              "Tier": "public"
            },
            "vpc_id": "vpc-06e7245304064dd5f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:118755950183:vpc/vpc-06e7245304064dd5f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-0a897adbdb70474b8",
            "default_route_table_id": "rtb-08a299ec00864dcfc",
            "default_security_group_id": "sg-0cb3637af0e367527",
            "dhcp_options_id": "dopt-0bb4e3ad935e03275",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06e7245304064dd5f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08a299ec00864dcfc",
            "owner_id": "118755950183",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "mbole-pay-prod-vpc",
              "Project": "mbole-pay"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "mbole-pay-prod-vpc",
              "Project": "mbole-pay"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}